move style.scss to sass folder and ad rest of styles to website

--- a/index.html
+++ b/index.html
@@ -85,70 +85,85 @@
         </section>
         <section class="portfolio">
             <div class="container">
-                <div class="porfolio-tiles">
-                    <div class="portfolio-text">
-                        <h2 class="title1"> OUR PORTFOLIO </h2>
-                        <p class="p-text">Proin iaculis purus consequat sem cure. </p>
+                 <div class="portfolio-text">
+                    <h2 class="title1"> OUR PORTFOLIO </h2>
+                    <p class="p-text">Proin iaculis purus consequat sem cure. </p>
+                </div>
+                <div class="portfolio-tiles">
+                    <div class="portfolio-tile">
+                        <div class="portfolio-tile-inner-img">
+                            <img class="portfolio-img" alt="portfolio-img" src="https://images.pexels.com/photos/67112/pexels-photo-67112.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                        </div>
+                        <div class="portfolio-tile-inner">                                <h4 class="text2">Ebony "&amp;" Ivory</h4>
+                            <p class="p-text">Branding</p>
+                        </div>
                     </div>
-                    <div class="portfolio-tiles">
-                        <div class="portfolio-tile">
-                            <div class="portfolio-img">
-                            </div>
-                            <div class="portfolio-tile-inner">
-                                <h4 class="text2">Ebony "&amp;" Ivory</h4>
-                                <p class="p-text">Branding</p>
-                            </div>
+                    <div class="portfolio-tile">
+                        <div class="portfolio-tile-inner-img">
+                            <img class="portfolio-img" alt="portfolio-img" src="https://images.pexels.com/photos/191429/pexels-photo-191429.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
                         </div>
-                        <div class="portfolio-tile">
-                            <div class="portfolio-img">
-                            </div>
-                            <div class="portfolio-tile-inner">
-                                <h4 class="text2">Smart Stationary</h4>
-                                <p class="p-text">Print Design</p>
-                            </div>
+                        <div class="portfolio-tile-inner">
+                            <h4 class="text2">Smart Stationary</h4>
+                            <p class="p-text">Print Design</p>
                         </div>
-                        <div class="portfolio-tile">
-                            <div class="portfolio-img">
-                            </div>
-                            <div class="portfolio-tile-inner">
-                                <h4 class="text2">Clever Poster</h4>
-                                <p class="p-text">Print Design</p>
-                            </div>
+                    </div>
+                    <div class="portfolio-tile">
+                        <div class="portfolio-tile-inner-img">
+                            <img class="portfolio-img" alt="portfolio-img" src="https://images.pexels.com/photos/1566412/pexels-photo-1566412.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
                         </div>
-                        <div class="portfolio-tile">
-                            <div class="portfolio-img">
-                            </div>
-                            <div class="portfolio-tile-inner">
-                                <h4 class="text2">Vinyl Record</h4>
-                                <p class="p-text">Product Mock-Up</p>
-                            </div>
+                        <div class="portfolio-tile-inner">                                <h4 class="text2">Clever Poster</h4>
+                            <p class="p-text">Print Design</p>
                         </div>
-                        <div class="portfolio-tile">
-                            <div class="portfolio-img">
-                            </div>
-                            <div class="portfolio-tile-inner">
-                                <h4 class="text2">Treehouse Template</h4>
-                                <p class="p-text">Web Design</p>
-                            </div>
+                    </div>
+                    <div class="portfolio-tile">
+                        <div class="portfolio-tile-inner-img">
+                            <img class="portfolio-img" alt="portfolio-img" src="https://images.pexels.com/photos/1925099/pexels-photo-1925099.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
                         </div>
-                        <div class="portfolio-tile">
-                            <div class="portfolio-img">
-                            </div>
-                            <div class="portfolio-tile-inner">
-                                <h4 class="text2">Burned Logo</h4>
-                                <p class="p-text">Branding</p>
-                            </div>
+                        <div class="portfolio-tile-inner">
+                            <h4 class="text2">Vinyl Record</h4>
+                            <p class="p-text">Product Mock-Up</p>
                         </div>
+                    </div>
+                    <div class="portfolio-tile">
+                        <div class="portfolio-tile-inner-img">
+                            <img class="portfolio-img" alt="portfolio-img" src="https://images.pexels.com/photos/109371/pexels-photo-109371.jpeg?cs=srgb&dl=pexels-monoar-rahman-109371.jpg&fm=jpg">
+                        </div>
+                    <div class="portfolio-tile-inner">
+                        <h4 class="text2">Treehouse Template</h4>
+                        <p class="p-text">Web Design</p>                            </div>
+                    </div>
+                    <div class="portfolio-tile">
+                        <div class="portfolio-tile-inner-img">
+                            <img class="portfolio-img" alt="portfolio-img" src="https://images.pexels.com/photos/5359802/pexels-photo-5359802.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                        </div>
+                        <div class="portfolio-tile-inner">
+                            <h4 class="text2">Burned Logo</h4>
+                            <p class="p-text">Branding</p>
+                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="footer">
             <div class="container">
-                <div class="footer-text">
-                    <p class="p-text">© Copyright 2014 FreebiesXpress.com</p>
-                </div>
-                <div class="sm-icons">
+                <div class="footer-inner">
+                    <div class="footer-text">
+                        <p class="p-text">© Copyright 2014 FreebiesXpress.com</p>
+                    </div>
+                    <div class="sm-icons">
+                        <div class="sm-icon-inner">
+                            <i class="sm-icon fa-brands fa-facebook"></i>
+                        </div>
+                        <div class="sm-icon-inner">
+                            <i class="sm-icon fa-brands fa-instagram"></i>
+                        </div>
+                        <div class="sm-icon-inner">
+                            <i class="sm-icon fa-brands fa-pinterest"></i>
+                        </div>
+                        <div class="sm-icon-inner">
+                            <i class="sm-icon fa-brands fa-twitter"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
